Bug 319303 - Ark is not working with unrar 5.X, ListArgs works, but parser failed
Summary: Ark is not working with unrar 5.X, ListArgs works, but parser failed
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Raphael Kubo da Costa
URL:
Keywords:
: 324577 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-05-04 09:16 UTC by Aaron Lewis
Modified: 2016-07-22 20:43 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aaron Lewis 2013-05-04 09:16:01 UTC
Hi,

Ark can no longer read the contents of a rar file with unrar 5.X beta.

I've enabled debug options, tried the ListArgs manually, output are fine, but Ark can't parse it

Reproducible: Always
Comment 1 Denis M. (Phr33d0m) 2013-05-11 14:31:50 UTC
Confirming this issue here as well on KDE 4.10.3 with Ark 2.19. If I downgrade to unrar-4.2.4 (for example) Ark works again without issues.
Comment 2 Giovanni Scafora 2013-06-10 13:23:40 UTC
Ark can no longer read the contents of a rar file with unrar 5.
Please, fix it.
Comment 3 Wulf C. Krueger 2013-06-26 04:27:04 UTC
*** This bug has been confirmed by popular vote. ***
Comment 4 Raphael Kubo da Costa 2013-06-27 14:10:04 UTC
Sigh, unrar decided to completely change its output format in version 5...
Comment 5 Christoph Feck 2013-07-21 10:54:11 UTC
https://git.reviewboard.kde.org/r/111625/
Comment 6 Christoph Feck 2013-09-06 00:09:15 UTC
*** Bug 324577 has been marked as a duplicate of this bug. ***
Comment 7 Christoph Feck 2013-09-19 22:27:00 UTC
Git commit 6d8bd57bbd5d1fcf8a8f0d3160f7a6a2153b1e47 by Christoph Feck.
Committed on 19/09/2013 at 22:24.
Pushed by cfeck into branch 'KDE/4.11'.

Fix unrar 5 support
FIXED-IN: 4.11.2
REVIEW: 111625

M  +8    -2    kerfuffle/cliinterface.cpp
M  +8    -0    kerfuffle/cliinterface.h
M  +78   -0    plugins/clirarplugin/cliplugin.cpp
M  +2    -0    plugins/clirarplugin/cliplugin.h

http://commits.kde.org/ark/6d8bd57bbd5d1fcf8a8f0d3160f7a6a2153b1e47
Comment 8 Christoph Feck 2013-09-19 22:37:08 UTC
Git commit ae9b97f720f708074ff624c87fef7d713031de4b by Christoph Feck.
Committed on 19/09/2013 at 22:24.
Pushed by cfeck into branch 'master'.

Fix unrar 5 support
FIXED-IN: 4.11.2
REVIEW: 111625
(cherry picked from commit 6d8bd57bbd5d1fcf8a8f0d3160f7a6a2153b1e47)

M  +8    -2    kerfuffle/cliinterface.cpp
M  +8    -0    kerfuffle/cliinterface.h
M  +78   -0    plugins/clirarplugin/cliplugin.cpp
M  +2    -0    plugins/clirarplugin/cliplugin.h

http://commits.kde.org/ark/ae9b97f720f708074ff624c87fef7d713031de4b
Comment 9 Martin Marques 2016-07-22 20:38:50 UTC
I'm using Fedora 23 and this problem persists. I actually never got ark to work again after I upgraded to unrar 5.

Details:

ark-15.04.3-1.fc23.x86_64
unrar-5.2.3-1.fc22.x86_64
Comment 10 Martin Marques 2016-07-22 20:43:37 UTC
(In reply to Martin Marques from comment #9)
> I'm using Fedora 23 and this problem persists. I actually never got ark to
> work again after I upgraded to unrar 5.
> 
> Details:
> 
> ark-15.04.3-1.fc23.x86_64
> unrar-5.2.3-1.fc22.x86_64

I fixed my problem installing unar.

Maybe the Fedora folks should add another reference to the ark package.

Thanks guys