Fix unrar 5 support

BUG: 319303
FIXED-IN: 4.11.2
REVIEW: 111625
(cherry picked from commit 6d8bd57bbd5d1fcf8a8f0d3160f7a6a2153b1e47)